tests/fixtures/invalid/str_notin_none.py
# Cannot use 'not in' with Str and None
x: bool = "hello" not in None
